infra/configs/envoy-gateway/GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-${instance}
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
