infra/configs/envoy-gateway/Gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-${instance}
  annotations:
    cert-manager.io/cluster-issuer: ${clusterIssuer}
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  gatewayClassName: envoy-gateway-${instance}
  infrastructure:
    annotations:
      # See [CiliumLoadBalancerIPPool.yaml](CiliumLoadBalancerIPPool.yaml)
      io.cilium/lb-ipam-ips: ${ipamIP}
    parametersRef:
      # Required for CiliumL2AnnouncementPolicy
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway-${instance}-ds
  listeners:
    - name: http
      # Flux could not replace variable starting with `*`.
      # See https://github.com/fluxcd/kustomize-controller/issues/1107
      hostname: "*.${wildcardHostname:=envoy.cluster.local}"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.${wildcardHostname:=envoy.cluster.local}"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-gateway-${instance}-tls-cert
