infra/configs/envoy-gateway/HTTPRoute-http-to-https.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
spec:
  parentRefs:
    - name: envoy-gateway-${instance}
      sectionName: http
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: "Cache-Control"
                value: "max-age=3600, public"
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
